Cleanup: remove RSI and memoptimize for write support